# TK_2308

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  token.pickle
backend/app/: booking.py  chatgpt.py  main.py  schemas.py  slack.py  summarize.py
backend/app/google/: main.py  read_calendar.py
backend/app/googlecal/: googlecal.py  write_calendar.py
