[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kino-ma <ma@kino.ma>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.68.0,<0.69.0"
pydantic = ">=1.8.0,<2.0.0"
uvicorn = ">=0.15.0,<0.16.0"
SQLAlchemy = "^2.0.22"
sqlalchemy_seed = "^0.3.0"
slack-sdk = "^3.23.0"
openai = "^0.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
